# linux-qt

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CODEOWNERS  README.md  REUSE.toml  _typos.toml
debian/: changelog  compat  control  copyright  rules
debian/source/: format
design/: INVENTORY.md
include/: vauchi.h
packaging/: PKGBUILD  vauchi-qt.desktop  vauchi-qt.spec
resources/: resources.qrc
scripts/: coverage.sh
src/: app.cpp  app.h  i18n.h  main.cpp
src/coreui/: componentrenderer.cpp  componentrenderer.h  screenrenderer.cpp  screenrenderer.h  thememanager.cpp  thememanager.h
src/coreui/components/: actionlistcomponent.cpp  actionlistcomponent.h  avatarpreviewcomponent.cpp  avatarpreviewcomponent.h  bannercomponent.cpp  bannercomponent.h  cardpreviewcomponent.cpp  cardpreviewcomponent.h  confirmationdialogcomponent.cpp  confirmationdialogcomponent.h  contactlistcomponent.cpp  contactlistcomponent.h  dividercomponent.cpp  dividercomponent.h  dropdowncomponent.cpp  dropdowncomponent.h  editabletextcomponent.cpp  editabletextcomponent.h  fieldlistcomponent.cpp  fieldlistcomponent.h  imagecirclecomponent.cpp  imagecirclecomponent.h  indicatorcomponent.cpp  indicatorcomponent.h  infopanelcomponent.cpp  infopanelcomponent.h  inlineconfirmcomponent.cpp  inlineconfirmcomponent.h  listcomponent.cpp  listcomponent.h  pininputcomponent.cpp  pininputcomponent.h  previewcomponent.cpp  previewcomponent.h  qrcodecomponent.cpp  qrcodecomponent.h  rowcomponent.cpp  rowcomponent.h  sectionedactionlistcomponent.cpp  sectionedactionlistcomponent.h  (+14 more)
src/platform/: audiobackend.cpp  audiobackend.h  bleadvertiser.cpp  bleadvertiser.h  blebackend.cpp  blebackend.h  camerabackend.cpp  camerabackend.h  directsendworker.cpp  directsendworker.h  hardwarebackend.cpp  hardwarebackend.h  menubar.cpp  menubar.h  nfcbackend.cpp  nfcbackend.h  screencaptureprotection.cpp  screencaptureprotection.h  systemtray.cpp  systemtray.h
tests/: app_engine_test.cpp  componentrenderer_test.cpp  render_fixture_smoke.cmake  smoke_test.cpp  theme_test.cpp
tests/atspi/: conftest.py  helpers.py  log_capture.py  requirements.txt  run-tests.sh  screenshot.py  test_components.py  test_exploratory.py  test_find_app.py  test_interactions.py  test_keyboard.py  test_launch.py  test_screens.py  test_snapshots.py  test_workflows.py
